# fundamentos-programacion-basica-cpp

./: CMakeLists.txt  README.md
Modulo0_Fundamentos/: EXPLICACION_TECNICA.md  TALLERES_MODULO_0.md  main_structs.cpp
Modulo1_Texto/: EXPLICACION_TECNICA.md  TALLERES_MODULO_1.md  filtro_csv.cpp  main_textos.cpp
Modulo2_Binarios/: TALLERES_MODULO_2.md  main_binarios.cpp
